--- a/h/ho/hou/houseladder.co.uk.html
+++ b/h/ho/hou/houseladder.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the houseladder.co.uk privacy policy that was archived on 2010-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100610001241id_/http%3A//www.houseladder.co.uk/Privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the houseladder.co.uk privacy policy that was archived on 2010-08-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100812045509id_/http%3A//www.houseladder.co.uk/Privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 		<title>Houseladder - Privacy Policy </title>
@@ -19,14 +19,12 @@
 		<div class="mainpg">
 <!-- Logo and top menus-->		
 		<!-- Logo and picture of houses at top-->
-
 		<div style="width:990px;">
 			<div style="FLOAT: left; WIDTH: 345px; PADDING-TOP: 15px; HEIGHT: 48px; padding-left:30px;">
 				<div style="height:14px; font-size:10px;"><a style="TEXT-DECORATION: none" href="http://www.houseladder.co.uk/"><font color="green">Sell or let your house privately online</font></a></div>
 				<div style="height:42px"><a href="http://www.houseladder.co.uk/"><img height="32px" width="213px" alt="Houseladder.co.uk" src="/Images/Live/Logo.gif"></a></div>
-				
 			</div>
-			<div id="tblcRef" style="FLOAT: left; WIDTH: 595px; HEIGHT: 60px; padding:10px;"><a href="http://www.houseladder.co.uk/Information/House_Prices.aspx"><img src="/Images/Live/Ad/House_Prices.gif" alt="House Prices"></a></div>
+			<div id="tblcRef" style="FLOAT: left; WIDTH: 595px; HEIGHT: 60px; padding:10px;">&nbsp;</div>
 		</div>
 
 <!-- Main menu bar -->
@@ -46,8 +44,6 @@
         <div class="mainMenuNoTag" style="width: 65px"><a href="https://www.houseladder.co.uk/Accounts/AccountLoginDetails.aspx">LOGIN</a></div>
 				<div class="mainMenuNoTag" style="width: 24px">&nbsp;</div>
 			</div>
-			
-			
 <!-- Sub Menu bar -->
 			<div class="subMenu">
 				&nbsp;&nbsp;
@@ -72,49 +68,9 @@
 		_uacct = "UA-92795-1";
 		urchinTracker();
 		</script>
-		
 
-	<script type="text/javascript">
-			var dteToday = new Date();
-			var strLastSecond = dteToday.getSeconds().toString();
-			strLastSecond = strLastSecond.substr(strLastSecond.length-1,1);
-			
-			switch(strLastSecond)
-			{
-				case "0":
-					document.getElementById("tblcRef").innerHTML="<a href='http://www.houseladder.co.uk/Information/Ebook.aspx'><img src='/Images/Live/Ad/Ebook_button.gif' alt='Free Property ebook' /></a>";
-					break;
-				case "1":
-					document.getElementById("tblcRef").innerHTML="<a href='http://www.houseladder.co.uk/Information/Ebook.aspx'><img src='/Images/Live/Ad/Ebook_button.gif' alt='Free Property ebook' /></a>";
-					break;
-				case "2":
-					document.getElementById("tblcRef").innerHTML="<a href='http://www.houseladder.co.uk/Information/Ebook.aspx'><img src='/Images/Live/Ad/Ebook_button.gif' alt='Free Property ebook' /></a>";
-					break;
-				case "3":
-					document.getElementById("tblcRef").innerHTML="<a href='http://www.houseladder.co.uk/Information/House_Prices.aspx'><img src='/Images/Live/Ad/House_Prices.gif'  alt='House Prices' /></a>";
-					break;
-				case "4":
-					document.getElementById("tblcRef").innerHTML="<a href='http://www.houseladder.co.uk/Information/House_Prices.aspx'><img src='/Images/Live/Ad/House_Prices.gif' alt='House Prices' /></a>";
-					break;
-				case "5":
-					document.getElementById("tblcRef").innerHTML="<a href='http://www.houseladder.co.uk/Information/House_Prices.aspx'><img src='/Images/Live/Ad/House_Prices.gif' alt='House Prices' /></a>";
-					break;
-				case "6":
-					document.getElementById("tblcRef").innerHTML="<a href='http://www.houseladder.co.uk/Information/House_Prices.aspx'><img src='/Images/Live/Ad/House_Prices.gif' alt='House Prices' /></a>";
-					break;
-				case "7":
-					document.getElementById("tblcRef").innerHTML="<a href='http://www.houseladder.co.uk/Information/Services.aspx'><img src='/Images/Live/Ad/Post_Ad.gif' alt='Free Property Advert' /></a>";
-					break;
-				case "8":
-					document.getElementById("tblcRef").innerHTML="<a href='http://www.houseladder.co.uk/Information/Services.aspx'><img src='/Images/Live/Ad/Post_Ad.gif' alt='Free Property Advert' /></a>";
-					break;
-				case "9":
-					document.getElementById("tblcRef").innerHTML="<a href='http://www.houseladder.co.uk/Information/Services.aspx'><img src='/Images/Live/Ad/Post_Ad.gif' alt='Free Property Advert' /></a>";
-					break;
-				default:
-					document.getElementById("tblcRef").innerHTML="<a href='http://www.houseladder.co.uk/Information/Services.aspx'><img src='/Images/Live/Ad/Post_Ad.gif' alt='Free Property Advert' /></a>";
-			}
-		</script>
+<script src="/InterfaceWelcome.js" type="text/javascript">
+</script>
 
 
 	
@@ -177,51 +133,10 @@ GUIDES
 				<div class="mainTitle">
 					<h1>Houseladder - Privacy Policy</h1>
 				</div>			
-				<div class="mainStrap" id="divStrapRotate" style="height:30px; font-size:14px; padding-top:10px;"><a href="http://www.houseladder.co.uk/Information/Ebook.aspx"><b>Claim Your FREE Property ebook worth £47 &gt;&gt;</b></a></div>
+				<div class="mainStrap" id="divStrapRotate" style="height:30px; font-size:14px; padding-top:10px;">
+  <a href="http://www.houseladder.co.uk/Information/Services.aspx"><b>Selling or Letting? Advertise Your Property FREE &gt;&gt;</b></a>
+</div>
 
-
-		<script type="text/javascript">
-			var dteToday = new Date();
-			var strLastSecond = dteToday.getSeconds().toString();
-			strLastSecond = strLastSecond.substr(strLastSecond.length-1,1);
-			
-			switch(strLastSecond)
-			{
-				case "0":
-					document.getElementById("divStrapRotate").innerHTML="<a href='http://www.houseladder.co.uk/Information/Services.aspx'><b>Selling or Letting? Advertise Your Property FREE >></b></a>";
-					break;
-				case "1":
-					document.getElementById("divStrapRotate").innerHTML="<a href='http://www.houseladder.co.uk/Information/Services.aspx'><b>Selling or Letting? Advertise Your Property FREE >></b></a>";
-					break;
-				case "2":
-					document.getElementById("divStrapRotate").innerHTML="<a href='http://www.houseladder.co.uk/Information/Services.aspx'><b>Selling or Letting? Advertise Your Property FREE >></b></a>";
-					break;
-				case "3":
-					document.getElementById("divStrapRotate").innerHTML="<a href='http://www.houseladder.co.uk/Information/Services.aspx'><b>Selling or Letting? Advertise Your Property FREE >></b></a>";
-					break;
-				case "4":
-					document.getElementById("divStrapRotate").innerHTML="<a href='http://www.houseladder.co.uk/Information/Services.aspx'><b>Selling or Letting? Advertise Your Property FREE >></b></a>";
-					break;
-				case "5":
-					document.getElementById("divStrapRotate").innerHTML="<a href='http://www.houseladder.co.uk/Information/Ebook.aspx'><b>Claim Your FREE Property ebook worth &pound;47 >></b></a>";
-					break;
-				case "6":
-					document.getElementById("divStrapRotate").innerHTML="<a href='http://www.houseladder.co.uk/Information/Ebook.aspx'><b>Claim Your FREE Property ebook worth &pound;47 >></b></a>";
-					break;
-				case "7":
-					document.getElementById("divStrapRotate").innerHTML="<a href='http://www.houseladder.co.uk/Information/Ebook.aspx'><b>Claim Your FREE Property ebook worth &pound;47 >></b></a>";
-					break;
-				case "8":
-					document.getElementById("divStrapRotate").innerHTML="<a href='http://www.houseladder.co.uk/Information/Ebook.aspx'><b>Claim Your FREE Property ebook worth &pound;47 >></b></a>";
-					break;
-				case "9":
-					document.getElementById("divStrapRotate").innerHTML="<a href='http://www.houseladder.co.uk/Information/Ebook.aspx'><b>Claim Your FREE Property ebook worth &pound;47 >></b></a>";
-					break;
-				default:
-					document.getElementById("divStrapRotate").innerHTML="<a href='http://www.houseladder.co.uk/Information/Services.aspx'><b>Selling or Letting? Advertise Your Property FREE >></b></a>";
-					
-			}
-		</script>
 				<div>
 					<b>1. This Privacy Policy</b>
 					<br>
@@ -292,11 +207,6 @@ GUIDES
 			</div>
 		<div style="float:left; padding-top:0px; padding-left:15px; background-color: #E6FDD9;">
   <div style="float:left; padding-top:10px; padding-left:0px; width:160px;">
-    <script type="text/javascript">var addthis_pub="houseladder";</script>
-    <a href="http://www.addthis.com/bookmark.php?v=20" onmouseover="return addthis_open(this, '', '[URL]', '[TITLE]')" onmouseout="addthis_close()" onclick="return addthis_sendto()">
-      <img src="http://s7.addthis.com/static/btn/lg-bookmark-en.gif" width="125" height="16" alt="Bookmark and Share" style="BORDER-TOP-WIDTH:0px; BORDER-LEFT-WIDTH:0px; BORDER-BOTTOM-WIDTH:0px; BORDER-RIGHT-WIDTH:0px">
-    </a><script type="text/javascript" src="http://s7.addthis.com/js/200/addthis_widget.js"></script>
-    <br><br>
     <a href="http://www.houseladder.co.uk/Information/Services.aspx">
       <b>FREE Property Advert</b>
     </a>
@@ -330,7 +240,7 @@ GUIDES
     <a href="http://www.houseladder.co.uk/Information/Conveyancing_quote.aspx">
       <b>Conveyancing</b>
     </a>
-    <br>Get a Quote and Save Â£100s.
+    <br>Get a Quote and Save £100s.
     <br><br>
     <a href="http://www.houseladder.co.uk/Information/LandlordLegal.aspx">
       <b>Tenancy Agreement</b>
@@ -443,11 +353,6 @@ GUIDES
     <a href="/Agents/AgentSearch.aspx">Agents</a>
     <br>
     <br>
-    <script type="text/javascript">var addthis_pub="houseladder";</script>
-    <a href="http://www.addthis.com/bookmark.php?v=20" onmouseover="return addthis_open(this, '', '[URL]', '[TITLE]')" onmouseout="addthis_close()" onclick="return addthis_sendto()">
-      <img src="http://s7.addthis.com/static/btn/lg-bookmark-en.gif" width="125" height="16" alt="Bookmark and Share" style="BORDER-TOP-WIDTH:0px; BORDER-LEFT-WIDTH:0px; BORDER-BOTTOM-WIDTH:0px; BORDER-RIGHT-WIDTH:0px">
-    </a><script type="text/javascript" src="http://s7.addthis.com/js/200/addthis_widget.js"></script>
-    <br><br>
   </div>
  </div>
 <!-- footer -->
@@ -462,19 +367,33 @@ GUIDES
   <br>
   ©Houseladder Ltd. Registered in England &amp; Wales. Company reg no. 4821799. Data Protection Act reg no. Z8095841
   <br><br>
-  Area Guides:&nbsp;<a href="/UK/East/PropertyByTownCountyList.aspx">East</a>
-  &nbsp;|&nbsp;<a href="/UK/East_Midlands/PropertyByTownCountyList.aspx">E Mids</a>
-  &nbsp;|&nbsp;<a href="/UK/North/PropertyByTownCountyList.aspx">North</a>
-  &nbsp;|&nbsp;<a href="/UK/North_East/PropertyByTownCountyList.aspx">N East</a>
-  &nbsp;|&nbsp;<a href="/UK/North_West/PropertyByTownCountyList.aspx">N West</a>
-  &nbsp;|&nbsp;<a href="/UK/Northern_Ireland/PropertyByTownCountyList.aspx">N Ireland</a>
-  &nbsp;|&nbsp;<a href="/UK/Other/PropertyByTownCountyList.aspx">Other</a>
-  &nbsp;|&nbsp;<a href="/UK/Scotland/PropertyByTownCountyList.aspx">Scotland</a>
-  &nbsp;|&nbsp;<a href="/UK/South/PropertyByTownCountyList.aspx">South</a>
-  &nbsp;|&nbsp;<a href="/UK/South_East/PropertyByTownCountyList.aspx">S East</a>
-  &nbsp;|&nbsp;<a href="/UK/South_West/PropertyByTownCountyList.aspx">S West</a>
-  &nbsp;|&nbsp;<a href="/UK/Wales/PropertyByTownCountyList.aspx">Wales</a>
-  &nbsp;|&nbsp;<a href="/UK/West_Midlands/PropertyByTownCountyList.aspx">W Mids</a>
+  For Sale:&nbsp;<a href="/UK/East/Property_For_Sale.aspx">East</a>
+  &nbsp;|&nbsp;<a href="/UK/East_Midlands/Property_For_Sale.aspx">E Mids</a>
+  &nbsp;|&nbsp;<a href="/UK/North/Property_For_Sale.aspx">North</a>
+  &nbsp;|&nbsp;<a href="/UK/North_East/Property_For_Sale.aspx">N East</a>
+  &nbsp;|&nbsp;<a href="/UK/North_West/Property_For_Sale.aspx">N West</a>
+  &nbsp;|&nbsp;<a href="/UK/Northern_Ireland/Property_For_Sale.aspx">N Ireland</a>
+  &nbsp;|&nbsp;<a href="/UK/Other/Property_For_Sale.aspx">Other</a>
+  &nbsp;|&nbsp;<a href="/UK/Scotland/Property_For_Sale.aspx">Scotland</a>
+  &nbsp;|&nbsp;<a href="/UK/South/Property_For_Sale.aspx">South</a>
+  &nbsp;|&nbsp;<a href="/UK/South_East/Property_For_Sale.aspx">S East</a>
+  &nbsp;|&nbsp;<a href="/UK/South_West/Property_For_Sale.aspx">S West</a>
+  &nbsp;|&nbsp;<a href="/UK/Wales/Property_For_Sale.aspx">Wales</a>
+  &nbsp;|&nbsp;<a href="/UK/West_Midlands/Property_For_Sale.aspx">W Mids</a>
+  <br>
+  For Rent:&nbsp;<a href="/UK/East/Property_To_Let.aspx">East</a>
+  &nbsp;|&nbsp;<a href="/UK/East_Midlands/Property_To_Let.aspx">E Mids</a>
+  &nbsp;|&nbsp;<a href="/UK/North/Property_To_Let.aspx">North</a>
+  &nbsp;|&nbsp;<a href="/UK/North_East/Property_To_Let.aspx">N East</a>
+  &nbsp;|&nbsp;<a href="/UK/North_West/Property_To_Let.aspx">N West</a>
+  &nbsp;|&nbsp;<a href="/UK/Northern_Ireland/Property_To_Let.aspx">N Ireland</a>
+  &nbsp;|&nbsp;<a href="/UK/Other/Property_To_Let.aspx">Other</a>
+  &nbsp;|&nbsp;<a href="/UK/Scotland/Property_To_Let.aspx">Scotland</a>
+  &nbsp;|&nbsp;<a href="/UK/South/Property_To_Let.aspx">South</a>
+  &nbsp;|&nbsp;<a href="/UK/South_East/Property_To_Let.aspx">S East</a>
+  &nbsp;|&nbsp;<a href="/UK/South_West/Property_To_Let.aspx">S West</a>
+  &nbsp;|&nbsp;<a href="/UK/Wales/Property_To_Let.aspx">Wales</a>
+  &nbsp;|&nbsp;<a href="/UK/West_Midlands/Property_To_Let.aspx">W Mids</a>
   <br><br>
   <a href="/EstateAgents.aspx">Estate Agents</a>
   <a href="/Flats.aspx">Flats</a>
