--- a/s/se/sen/sensorly.com.html
+++ b/s/se/sen/sensorly.com.html
@@ -1,18 +1,18 @@
-<!--The following is the downloaded HTML source of the sensorly.com privacy policy that was archived on 2010-05-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100501052315id_/http%3A//www.sensorly.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sensorly.com privacy policy that was archived on 2010-08-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100814130710id_/http%3A//www.sensorly.com/privacy-policy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr"><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr"><!-- AppStoreHQ:developer_claim_code:0e70d4d22b113d7d4761e777ab443fc2c5014d1d --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Privacy Policy | Sensorly</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAtMTshGmt-9BwR53QxALI5RQKIN2xaaO02uBIlOIkYfhD6I-9kBTi3gOsq02neSP-8MPK9yqj2NwWUg" type="text/javascript"></script>
 <link rel="shortcut icon" href="/sites/all/themes/sensorly/favicon.ico" type="image/x-icon">
-  <link type="text/css" rel="stylesheet" media="all" href="/sites/default/files/css/css_4b0b8cad471fb3191ea7b314b2fd3d6d.css">
-<link type="text/css" rel="stylesheet" media="print" href="/sites/default/files/css/css_1e20678a5a76911d4f60944d90a582c0.css">
+  <link type="text/css" rel="stylesheet" media="all" href="/sites/default/files/css/css_8f4608255713eb4b9ef9b36d7bb8a66b.css">
+<link type="text/css" rel="stylesheet" media="print" href="/sites/default/files/css/css_b36d3f310d8ff1b5c2ea878f8cd8a31b.css">
 <!--[if IE]>
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/zen/zen/ie.css?I" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/zen/zen/ie.css?s" />
 <![endif]-->
-  <script type="text/javascript" src="/sites/default/files/js/js_91a273a95964c6a041e714444af44c39.js"></script>
+  <script type="text/javascript" src="/sites/default/files/js/js_31d26c5a89924beb5865fe3e0fb91d03.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOutgoing": 1, "trackMailto": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip" }, "lightbox2": { "rtl": "0", "file_path": "/(\\w\\w/)sites/default/files", "default_image": "/sites/all/modules/lightbox2/images/brokenimage.jpg", "border_size": "10", "font_color": "000", "box_color": "fff", "top_position": "", "overlay_opacity": "0.8", "overlay_color": "000", "disable_close_click": 1, "resize_sequence": "0", "resize_speed": 400, "fade_in_speed": 400, "slide_down_speed": 600, "use_alt_layout": 0, "disable_resize": 0, "disable_zoom": 0, "force_show_nav": 0, "loop_items": 0, "node_link_text": "View Image Details", "node_link_target": 0, "image_count": "", "video_count": "Video !current of !total", "page_count": "Page !current of !total", "lite_press_x_close": "press \x3ca href=\"#\" onclick=\"hideLightbox(); return FALSE;\"\x3e\x3ckbd\x3ex\x3c/kbd\x3e\x3c/a\x3e to close", "download_link_text": "", "enable_login": false, "enable_contact": false, "keys_close": "c x 27", "keys_previous": "p 37", "keys_next": "n 39", "keys_zoom": "z", "keys_play_pause": "32", "display_image_size": "", "image_node_sizes": "()", "trigger_lightbox_classes": "", "trigger_lightbox_group_classes": "", "trigger_slideshow_classes": "", "trigger_lightframe_classes": "", "trigger_lightframe_group_classes": "", "custom_class_handler": 0, "custom_trigger_classes": "", "disable_for_gallery_lists": true, "disable_for_acidfree_gallery_lists": true, "enable_acidfree_videos": true, "slideshow_interval": 5000, "slideshow_automatic_start": true, "slideshow_automatic_exit": true, "show_play_pause": true, "pause_on_next_click": false, "pause_on_previous_click": true, "loop_slides": false, "iframe_width": 600, "iframe_height": 400, "iframe_border": 1, "enable_video": 0 } });
@@ -29,7 +29,7 @@ $(document).ready(function(){
             dropShadows: false
         }); 
         
-        loadSensorlyMap('cdma-sp', 'CDMA - USA - Sprint', 40.720079, -74.001288);
+        loadSensorlyMap('wimax-sp', '4G - USA - Sprint', 38.94553, -77.35735);
     });
 //--><!]]>
 </script>
@@ -105,8 +105,9 @@ jQuery.extend(Drupal.settings, {
                               
                       <div id="primary">
               <ul class="links"><li class="menu-140 first"><a href="/home" title="Home">Home</a></li>
-<li class="menu-176"><a href="/downloads" title="Downloads">Downloads</a></li>
 <li class="menu-141"><a href="/learn-more" title="Learn More">About</a></li>
+<li class="menu-176"><a href="/downloads" title="Downloads">Applications</a></li>
+<li class="menu-322"><a href="/map" title="See what networks we currently support and how good our coverage is">Maps</a></li>
 <li class="menu-247"><a href="/faq" title="FAQ">Faq</a></li>
 <li class="menu-248"><a href="/blog" title="">News</a></li>
 <li class="menu-199 active-trail last active"><a href="/privacy-policy" title="Privacy Policy" class="active">Privacy</a></li>
@@ -256,7 +257,7 @@ Our sites also use the Google Analytics service in order to determine where you 
   </div></div> <!-- /#page-inner, /#page -->
 
   
-  <script type="text/javascript" src="/sites/default/files/js/js_ba2e9fd35372a0ef56a405a7fb52e96e.js"></script>
+  <script type="text/javascript" src="/sites/default/files/js/js_957ff3e13d89532193faea68e21100f9.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
