--- a/a/au/aut/autocarindia.com.html
+++ b/a/au/aut/autocarindia.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the autocarindia.com privacy policy that was archived on 2010-05-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100523023225id_/http%3A//www.autocarindia.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the autocarindia.com privacy policy that was archived on 2010-08-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100822160637id_/http%3A//www.autocarindia.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -31,7 +31,7 @@
         <div id="ad-header" class="advertisement">
                     </div>
         <div id="date-time">
-            Sunday 23rd May 2010        </div>
+            Sunday 22nd August 2010        </div>
         <div id="search-area">
             
  			<script type="text/javascript" language="javascript">
