--- a/s/su/sug/suggest.com.html
+++ b/s/su/sug/suggest.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the suggest.com privacy policy that was archived on 2010-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100612010144id_/http%3A//www.suggest.com/page/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the suggest.com privacy policy that was archived on 2010-08-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100823060006id_/http%3A//www.suggest.com/page/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -60,7 +60,7 @@
 		</div>
 		<span class="text">in</span>
 		<div class="location-container">
-			<input type="text" class="location" name="location" value="St Louis, MO">
+			<input type="text" class="location" name="location" value="Keller, TX">
 		</div>
 		<input type="submit" class="search-submit" value=" ">
 	</form>
