--- a/b/bo/bos/bose.com.html
+++ b/b/bo/bos/bose.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bose.com privacy policy that was archived on 2010-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100624010602id_/http%3A//www.bose.com/controller%3Furl%3D/customer_service/privacy/privacy_security.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bose.com privacy policy that was archived on 2010-08-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100823201045id_/http%3A//www.bose.com/controller%3Furl%3D/customer_service/privacy/privacy_security.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -732,6 +732,7 @@ D.K., Kentucky</div>
 			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/21channel_systems/321_systems/321_gs/index.jsp">&nbsp;&nbsp;• 3·2·1® GS system</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/21channel_systems/321_systems/321_gsx/index.jsp">&nbsp;&nbsp;• 3·2·1® GSX system</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/speakers/stereo_speakers/901_speakers/index.jsp">&nbsp;&nbsp;• 901® Direct/Reflecting® speakers</option>
+			<option value="http://www.bose.com/controller?url=/shop_online/headphones/aviation_headsets/a20/index.jsp">&nbsp;&nbsp;• A20™ aviation headset</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/wave_systems/awms/index.jsp">&nbsp;&nbsp;• Acoustic Wave® music system II</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/wave_systems/awms/awms_mdc_pkg.jsp">&nbsp;&nbsp;• Acoustic Wave® music system II with 5-CD changer</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/wave_systems/awms/awms_ipodkit_pkg.jsp">&nbsp;&nbsp;• Acoustic Wave® music system II with iPod® connect kit</option>
@@ -741,10 +742,11 @@ D.K., Kentucky</div>
 			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/home_theater_speakers/acoustimass_6/index.jsp">&nbsp;&nbsp;• Acoustimass® 6 speakers</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/home_theater_speakers/acoustimass_10/index.jsp">&nbsp;&nbsp;• Acoustimass® 10 speakers</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/home_theater_speakers/acoustimass_16/index.jsp">&nbsp;&nbsp;• Acoustimass® 16 speakers</option>
-			<option value="http://www.bose.com/controller?url=/shop_online/headphones/aviation_headsets/aviation_headset_x/index.jsp">&nbsp;&nbsp;• Aviation Headset X®</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/headphones/audio_headphones/around_ear_headphones/index.jsp">&nbsp;&nbsp;• Around-ear headphones</option>
+			<option value="http://www.bose.com/controller?url=/shop_online/headphones/audio_headphones/in_ear_headphones/index.jsp">&nbsp;&nbsp;• Bose® IE2 audio headphones</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/51channel_systems/accessories/al8.jsp">&nbsp;&nbsp;• Bose® link  AL8 homewide wireless audio link</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/51channel_systems/accessories/ar1.jsp">&nbsp;&nbsp;• Bose® link AR1 wireless audio receiver </option>
+			<option value="http://www.bose.com/controller?url=/shop_online/headphones/mobile_solutions/in_ear_mobile_solution/index.jsp">&nbsp;&nbsp;• Bose® MIE2 mobile headset </option>
 			<option value="http://www.bose.com/controller?url=/shop_online/digital_music_systems/sounddock_systems/music_to_go_package/index.jsp">&nbsp;&nbsp;• Bose® music-to-go package </option>
 			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/21channel_systems/cinemate_systems/cinemate_gs_series2/index.jsp">&nbsp;&nbsp;• CineMate® GS Series II home theater system</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/21channel_systems/cinemate_systems/cinemate_series2/index.jsp">&nbsp;&nbsp;• CineMate® Series II home theater system</option>
@@ -753,11 +755,6 @@ D.K., Kentucky</div>
 			<option value="http://www.bose.com/controller?url=/shop_online/digital_music_systems/computer_speakers/companion_5/index.jsp">&nbsp;&nbsp;• Companion® 5 speaker system</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/digital_music_systems/computer_speakers/music_monitor/index.jsp">&nbsp;&nbsp;• Computer MusicMonitor®</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/speakers/outdoor_marine_speakers/freespace_51/index.jsp">&nbsp;&nbsp;• Free Space® 51 speakers</option>
-			<option value="http://www.bose.com/controller?url=/shop_online/headphones/audio_headphones/in_ear_headphones/index.jsp">&nbsp;&nbsp;• In-ear headphones</option>
-			<option value="http://www.bose.com/controller?url=/shop_online/headphones/mobile_solutions/in_ear_mobile_solution/index.jsp">&nbsp;&nbsp;• Mobile in-ear headset </option>
-			<option value="http://www.bose.com/controller?url=/shop_online/headphones/mobile_solutions/on_ear_mobile_solution/index.jsp">&nbsp;&nbsp;• Mobile on-ear headset </option>
-			<option value="http://www.bose.com/controller?url=/shop_online/headphones/audio_headphones/on_ear_headphones/index.jsp">&nbsp;&nbsp;• On-ear headphones</option>
-			<option value="http://www.bose.com/controller?url=/shop_online/digital_music_systems/sounddock_systems/portable_music_package/index.jsp">&nbsp;&nbsp;• Portable music package</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/speakers/portable_amplification_systems/l1_compact/index.jsp">&nbsp;&nbsp;• L1® Compact system</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/speakers/portable_amplification_systems/l1_model1/l1_model1_basic_pkg.jsp">&nbsp;&nbsp;• L1® Model I basic package</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/speakers/portable_amplification_systems/l1_model1/l1_model1_single_pkg.jsp">&nbsp;&nbsp;• L1® Model I single bass package</option>
@@ -766,11 +763,13 @@ D.K., Kentucky</div>
 			<option value="http://www.bose.com/controller?url=/shop_online/speakers/portable_amplification_systems/l1_model2/l1_model2_doublebass_pkg.jsp">&nbsp;&nbsp;• L1® Model II double bass package </option>
 			<option value="http://www.bose.com/controller?url=/shop_online/speakers/portable_amplification_systems/l1_model2/l1_model2_singlebass_tonematch_pkg.jsp">&nbsp;&nbsp;• L1® Model II single bass package with T1 ToneMatch® audio engine</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/speakers/portable_amplification_systems/l1_model2/l1_model2_doublebass_tonematch_pkg.jsp">&nbsp;&nbsp;• L1® Model II double bass package with T1 ToneMatch® audio engine</option>
-			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/51channel_systems/dvd_systems/lifestyle_48/index.jsp">&nbsp;&nbsp;• Lifestyle® 48 system</option>	
+			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/51channel_systems/dvd_systems/lifestyle_48/index.jsp">&nbsp;&nbsp;• Lifestyle® 48 system</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/51channel_systems/accessories/sa2.jsp">&nbsp;&nbsp;• Lifestyle® SA-2 stereo amplifier </option>
 			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/51channel_systems/accessories/sa3.jsp">&nbsp;&nbsp;• Lifestyle® SA-3 stereo amplifier </option>
 			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/51channel_systems/component_systems/lifestyle_v_class/index.jsp">&nbsp;&nbsp;• Lifestyle® V-class system</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/51channel_systems/component_systems/lifestyle_t_class/index.jsp">&nbsp;&nbsp;• Lifestyle® T20 system</option>
+			<option value="http://www.bose.com/controller?url=/shop_online/headphones/mobile_solutions/on_ear_mobile_solution/index.jsp">&nbsp;&nbsp;• Mobile on-ear headset </option>
+			<option value="http://www.bose.com/controller?url=/shop_online/headphones/audio_headphones/on_ear_headphones/index.jsp">&nbsp;&nbsp;• On-ear headphones</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/headphones/noise_cancelling_headphones/quietcomfort_15/index.jsp">&nbsp;&nbsp;• QuietComfort® 15 headphones</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/headphones/noise_cancelling_headphones/quietcomfort_3/index.jsp">&nbsp;&nbsp;• QuietComfort® 3 headphones</option>
 			<option value="http://www.bose.com/controller?event=VIEW_STATIC_PAGE_EVENT&amp;url=/shop_online/digital_music_systems/sounddock_systems/sounddock10/index.jsp">&nbsp;&nbsp;• SoundDock® 10 digital music system</option>
@@ -786,6 +785,7 @@ D.K., Kentucky</div>
 			<option value="http://www.bose.com/controller?url=/shop_online/wave_systems/wms/wms_mdc_pkg.jsp">&nbsp;&nbsp;• Wave® music system multi-CD changer</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/digital_music_systems/wireless_systems/wms_soundlink/index.jsp">&nbsp;&nbsp;• Wave® music system - SoundLink™</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/wave_systems/wms/wms_ipodkit_pkg.jsp">&nbsp;&nbsp;• Wave® music system with iPod® connect kit</option>
+			<option value="http://www.bose.com/controller?url=/shop_online/wave_systems/wms/wms_ipodkit_pb.jsp">&nbsp;&nbsp;• Wave® premium bundle for iPod</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/wave_systems/wave_radio_ii/index.jsp">&nbsp;&nbsp;• Wave® radio II</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/wave_systems/wave_radio_ii/wr_ipodkit_pkg.jsp">&nbsp;&nbsp;• Wave® radio II with connect kit for iPod®</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/wave_systems/wave_radio_ii/wr_soundlink_pkg.jsp">&nbsp;&nbsp;• Wave® radio II with SoundLink® adapter</option>
@@ -796,13 +796,13 @@ D.K., Kentucky</div>
 			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/index.jsp">&nbsp;&nbsp;• Home theater systems</option>
 			<option value="http://www.bose.com/controller?event=VIEW_STATIC_PAGE_EVENT&amp;url=/shop_online/home_theater/51channel_systems/index.jsp">&nbsp;&nbsp;• Lifestyle® systems</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/lifestyle_systems_expansion/index.jsp">&nbsp;&nbsp;• Lifestyle® DVD system expansion</option>
-			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/lifestyle_v_class_expansion/index.jsp">&nbsp;&nbsp;• Lifestyle® V-class® system expansion</option>	
+			<option value="http://www.bose.com/controller?url=/shop_online/home_theater/lifestyle_v_class_expansion/index.jsp">&nbsp;&nbsp;• Lifestyle® V-class® system expansion</option>
 			<option value="http://www.bose.com/controller?event=VIEW_STATIC_PAGE_EVENT&amp;url=/shop_online/home_theater/21channel_systems/321_systems/index.jsp">&nbsp;&nbsp;• 3·2·1® DVD systems</option>
 			<option value="http://www.bose.com/controller?event=VIEW_STATIC_PAGE_EVENT&amp;url=/shop_online/home_theater/21channel_systems/cinemate_systems/index.jsp">&nbsp;&nbsp;• CineMate® home theater speaker systems</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/headphones/index.jsp">&nbsp;&nbsp;• Headphones and headsets</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/headphones/noise_cancelling_headphones/index.jsp">&nbsp;&nbsp;• QuietComfort® headphones</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/headphones/audio_headphones/index.jsp">&nbsp;&nbsp;• Audio headphones</option>
-			<option value="http://www.bose.com/controller?url=/shop_online/headphones/aviation_headsets/index.jsp">&nbsp;&nbsp;• Aviation headsets</option>
+			<option value="http://www.bose.com/controller?url=/shop_online/headphones/aviation_headsets/a20/index.jsp">&nbsp;&nbsp;• Aviation headsets</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/headphones/mobile_solutions/index.jsp">&nbsp;&nbsp;• Mobile solutions</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/speakers/index.jsp">&nbsp;&nbsp;• Speakers</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/speakers/outdoor_marine_speakers/index.jsp">&nbsp;&nbsp;• Outdoor and marine speakers</option>
@@ -812,15 +812,10 @@ D.K., Kentucky</div>
 			<option value="http://www.bose.com/controller?event=VIEW_STATIC_PAGE_EVENT&amp;url=/shop_online/digital_music_systems/wireless_systems/index.jsp">&nbsp;&nbsp;• Wireless music systems</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/digital_music_systems/sounddock_systems/index.jsp">&nbsp;&nbsp;• SoundDock® for iPod®</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/digital_music_systems/computer_speakers/index.jsp">&nbsp;&nbsp;• Computer speakers</option>
-			
+
 			<option value="" disabled="disabled">------------------------------</option>
 			<option value="http://www.bose.com/controller?url=/shop_online/gift_cards/index.jsp">Gift cards</option>
 			<option value="" disabled="disabled">------------------------------</option>
-			
-			
-			
-			
-			
 
 
 
